--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.custom-card-anim {
+  /* animation-name: red-to-black; */
+  /* animation-duration: 4s; */
+  /* animation-timing-function: linear; */
+  /* animation-delay: 2s; */
+  /* animation-iteration-count: 2; */
+  /* animation-iteration-count: infinite; */
+  /* animation-direction: normal; */
+  /* animation-direction: reverse; */
+  /* animation-direction: alternate; */
+  /* animation-direction: alternate-reverse; */
+
+  /* shorthand */
+  /* animation: name duration timing-function delay count direction */
+  -webkit-animation: red-to-black 1s linear 0s 1 normal;
+  -moz-animation: red-to-black 1s linear 0s 1 normal;
+  -ms-animation: red-to-black 1s linear 0s 1 normal;
+  -o-animation: red-to-black 1s linear 0s 1 normal;
+}
+
+@keyframes red-to-black {
+  0% {
+    transform: translate(0px, -70px);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translate(0px, -35px);
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: translate(0px, 0px);
+    opacity: 1;
+  }
 }
